--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
     "framer-motion": "^11.0.8",
-    "react-to-print": "^2.15.1"
+    "react-to-print": "^2.15.1",
+    "three": "^0.162.0",
+    "@react-three/fiber": "^8.15.19",
+    "@react-three/drei": "^9.102.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/three": "^0.162.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
